--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navigation -->
     <div class="container-fluid">
-        <nav class="navbar navbar-light navbar-expand-md py-0 bg-light fixed-top main-navbar">
+        <nav class="navbar navbar-light navbar-expand-md py-0 bg-light fixed-top main-navbar" id="mainNav">
             <h1><a href="{% url 'index' %}" class="navbar-brand">Opera Ireland</a></h1>   
                 <!-- Nav Toggler -->
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-links" aria-label="Toggle Navigation Menu">
