Imperfect working Role selection and display; improvement pending

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,7 +19,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <p>User Role/Voice</p>
+                    <p>{{ user_profile.role|title }}</p>
                 </div>
             </div>
         </div>
