--- a/templates/settings.html
+++ b/templates/settings.html
@@ -55,7 +55,7 @@
                     <div class="col-12 col-md-6 justify-content-center px-0 mb-2">
                         <div class="col-12 mb-1">
                             <label for="role">Role </label>
-                            <select id="role" name="role" id="role" value="{--}">
+                            <select id="role" name="role" id="role" value="{{user_profile.role}}">
                                 <option disabled selected value> -- select an option -- </option>
                                 <optgroup label="Vocal Performer:">
                                     <option value="soprano">Soprano</option>
