--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,11 @@ body {
     font-family: "Nunito", sans-serif;
 }
 
+/* Custom Properties */
+:root {
+    --accent1: #b21a7f;
+}
+
 /* SIGN-IN PAGE */
 .text-panel {
     padding-top: 1rem;
@@ -30,6 +35,10 @@ h3 {
     font-size: 1.5rem;
 }
 
+h4 {
+    font-size: 1.2rem;
+}
+
 /* PROFILE STYLES */
 .avatar {
     border: 1px solid rgb(109, 109, 109);
@@ -39,6 +48,12 @@ h3 {
 
 .profile-avatar {
     width: 85%;
+}
+
+#social-links,
+#social-links a {
+    background-color: var(--accent1);
+    color: #ffffff;
 }
 
 /* Profile: History*/
@@ -57,7 +72,7 @@ h3 {
 }
 
 .history-item-year {
-    color: #b21a7f;
+    color: var(--accent1);
     position: absolute;
     left: 2.5em;
     top: 3em;
@@ -78,7 +93,7 @@ h3 {
     position: absolute;
     left: -7px;
     border-radius: 50%;
-    background: #b21a7f;
+    background: var(--accent1);
 }
 
 /* POST STYLES */
