--- a/templates/signin.html
+++ b/templates/signin.html
@@ -39,7 +39,7 @@
     </div>
     <!-- Image Panel -->
     <div class="col-md-6 px-0 order-2 order-md-1">
-      <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089300/media/theatre-seats_ikycsx.png" aria-hidden="true" class="img-fluid">
+      <img src="{% static 'images/theatre-seats_ikycsx.png' %}" aria-hidden="true" class="img-fluid">
     </div>
   </div>
 
