--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load static %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
@@ -39,7 +38,7 @@
     </div>
     <!-- Image Panel -->
     <div class="col-md-6 px-0 order-2 order-md-1">
-      <img src="{% static 'images/theatre-seats_ikycsx.png' %}" aria-hidden="true" class="img-fluid">
+      <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089300/static/images/theatre-seats_ikycsx.png" aria-hidden="true" class="img-fluid">
     </div>
   </div>
 
@@ -58,7 +57,7 @@
     </div>
     <!-- Image Panel-->
     <div class="col-md-6 px-0">
-      <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089282/media/cast-reading_zxccsx.jpg" aria-hidden="true" class="img-fluid">
+      <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089282/static/images/cast-reading_zxccsx.jpg" aria-hidden="true" class="img-fluid">
     </div>
   </div>
 </section>
